--- a/Resources/views/Block/recent_posts.html.twig
+++ b/Resources/views/Block/recent_posts.html.twig
@@ -1,43 +1,23 @@
-<div class="blocmodule blocB module-actus">
-    <h4 class="text-uppercase"><span>Actus</span></h4>
-    <!-- Carousel  ================================================== -->
-    <div id="actus-carousel" class="carousel slide" data-ride="carousel" data-interval="false">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#actus-carousel" data-slide-to="0" class="active"></li>
-            <li data-target="#actus-carousel" data-slide-to="1"></li>
-            <li data-target="#actus-carousel" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner" role="listbox">
-            {% for news in articles  %}
+<div>
+    <h4>Actus</h4>
+
+    {% for news in articles %}
 
 
-            <div class="item {% if loop.index == 1 %}active{%  endif %}"
-                 style="background-image:url('{% path news.image, 'small' %}')">
-                <div class="carousel-caption">
-                    <h3 class="text-uppercase">{{ news.header }}</h3>
+    <div class="{% if loop.index == 1 %}active{% endif %}">
 
-                    <h1 class="text-uppercase titrearticle">{{ news.title|truncate(40) }}</h1>
+        <img src="{% path news.image, 'small' %}"/>
 
-                    <p class="date">{{ frenchDate(news.date) }} <span>{{ frenchTime(news.date) }}</span></p>
+        {{ news.header }}
 
-                    <p><a class="btn btn-light text-uppercase" href="{{ url('news_detail', { 'id': news.id, 'slug':news.slug }) }}" role="button"><span>Lire la suite</span></a>
-                    </p>
-                </div>
+        {{ news.title|truncate(40) }}
 
-            </div>
-            {%  endfor %}
-        </div>
-        <a class="left carousel-control hidden-xs" href="#actus-carousel" role="button"
-           data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control hidden-xs" href="#actus-carousel" role="button"
-           data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+        {{ frenchDate(news.date) }} {{ frenchTime(news.date) }}
+
+        <a class="btn btn-light text-uppercase" href="{{ url('news_detail', { 'id': news.id, 'slug':news.slug }) }}"
+           role="button"><span>Lire la suite</span></a>
+
+        {% endfor %}
     </div>
-    <!-- /.carousel -->
+
 </div>
