--- a/Resources/views/News/archives.html.twig
+++ b/Resources/views/News/archives.html.twig
@@ -1,4 +1,4 @@
-{% extends "@LpiSite/Default/structure.html.twig" %}
+{% extends "@LpiKernelBundle/structure.html.twig" %}
 
 {% set page = 'article' %}
 
@@ -9,16 +9,9 @@
 {% block content %}
 
 
-    <!-- new row -->
-    <div class="row">
-        <div class="col-xs-12">
-            <ol class="breadcrumb">
-                <li><a href="{{ url('homepage') }}">Accueil</a></li>
-                <li class="active">Archives</li>
-            </ol>
-        </div>
-    </div><!-- /.row -->
-    <!-- new row -->
+
+<h1>Archives</h1>
+
     <div class="row">
         <div class="col-xs-12">
 
