made gallery mandatory, clean bundle

--- a/Resources/views/News/archives.html.twig
+++ b/Resources/views/News/archives.html.twig
@@ -1,4 +1,4 @@
-{% extends "@LpiKernelBundle/structure.html.twig" %}
+{% extends "@App/structure.html.twig" %}
 
 {% set page = 'article' %}
 
@@ -75,11 +75,4 @@
         </div>
     </div><!-- /.row -->
 {% endblock %}
-{% block javascriptBasDePage %}
 
-
-
-{% endblock %}
-{% block tagcontainer %}
-    page page-archives
-{% endblock %}
